pattern-wishcast/tests/ui/guard_patterns_unsupported.stderr
error: Field patterns are not supported. Only wildcard pattern { .. } is allowed for struct variants. Field patterns will require native pattern types support in Rust.
  --> tests/ui/guard_patterns_unsupported.rs:16:43
   |
16 |     type PositiveNumbers = Value is Number { value } if value > 0;
   |                                              ^^^^^
